--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -1,6 +1,4 @@
-<link href="./header.component.css" rel="stylesheet">
-<div class="container-fluid py-3" id="d1">
-    <div class="row d-flex align-items-center">
+    <div class="row d-flex align-items-center"id="d1">
         <div class="col-md-3">
             <h1>Start-Match</h1>
             <h6>Start your enterneurship journey</h6>
@@ -12,7 +10,6 @@
             <a href="profile" ><h6 id="profile-name">Benmoussa Heithem</h6></a>
         </div>
         <div class="col-md-1">
-            <a href="profile"><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
+            <a href="profile"><img  src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
         </div>
     </div>
-</div>
