--- a/code source/src/app/navbar/navbar.component.css
+++ b/code source/src/app/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 button.btn1{
     color:white;
-    background: #BAC7DF;
+    background: #3A5587;
     border-top-left-radius: 22px;
     border-bottom-left-radius: 22px ;
     border-top-right-radius: 0px;
@@ -8,38 +8,17 @@ button.btn1{
 }
 button.btn2{
     color:white;
-    background: #BAC7DF;
+    background: #3A5587;
     border-radius:0 ;
     margin-left: 3px
 }
-input.inp1{
+button.btn3{
     color:white;
-    background: #BAC7DF; 
-    border-top-right-radius: 22px ;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius:22px;
+    background: #3A5587;
+    border-radius:0px ;
+    border-top-right-radius: 22px;
+    border-bottom-right-radius: 22px;
+    margin-left: 3px
 }
-.form-control::placeholder{
-    color:white;
-}
-.bi-search{
-    color:white;
-    background-color:#BAC7DF ;
-}
-.input-group-text{
-    background-color: #BAC7DF;
-    border-radius: 0px;
-    margin-left: -13px;
-}
-button{
-    width: 120px;
-    max-width: 120px;
-    min-width: 120px;
-    display: inline-block;
-}
-.input-group{
-    width: 200px;
-    max-width: 200px;
-    min-width: 200px;
-}
+
+
