--- a/code source/src/app/navbarnews/navbarnews.component.html
+++ b/code source/src/app/navbarnews/navbarnews.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./navbar.component.css">
+<link rel="stylesheet" href="./navbarnews.component.css">
 <nav>
   <div class="container" id="navbarNavAltMarkup">
     <div class="row">
@@ -10,7 +10,17 @@
             home
           </button>
           <button type="button" class="btn btn2" id="button2" href="about us">About Us</button>
-          <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button>
+          <button type="button" class="btn btn2" id="button3" href="contact us">Contact Us</button>
+        <form class="ms-3">
+          <div class="input-group">
+            <span class="input-group-text">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+            </svg>
+          </span>
+            <input type="text" class="form-control inp1" id="input1" placeholder="Search anything">
+          </div>
+        </form>
         </div>
         
     </div>
