--- a/code source/src/app/newsfeed/newsfeed.component.html
+++ b/code source/src/app/newsfeed/newsfeed.component.html
@@ -1,9 +1,7 @@
 <div class="container-fluid">
-<app-header></app-header>
+<app-headernews></app-headernews>
 <br>
 <app-newsfilter></app-newsfilter>
 <br>
 <app-suggested></app-suggested>
-<br>
-<app-searchfilter></app-searchfilter>
 </div>
