--- a/code source/src/app/search/search.component.html
+++ b/code source/src/app/search/search.component.html
@@ -1,1 +1,28 @@
+<app-header></app-header>
+<br>
 <app-searchfilter></app-searchfilter>
+<br>
+<div id="d1">
+    <div class="card" style="width: 18rem;">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            selected status
+            <br>
+            <span class="badge rounded-pill text-bg-secondary text-light">founder</span>
+            <span class="badge rounded-pill text-bg-secondary text-light">co-founder</span>
+          </li>
+          <li class="list-group-item">
+            selected type <br> 
+            <span class="badge rounded-pill text-bg-secondary text-light">post</span>
+            <span class="badge rounded-pill text-bg-secondary text-light">profile</span>
+          </li>
+          <li class="list-group-item">selected experience <br>
+            <span class="badge rounded-pill text-bg-secondary text-light">less than 5</span>
+        </li>
+          <li class="list-group-item">selected fileds <br>
+            <span class="badge rounded-pill text-bg-secondary text-light">computer science</span>
+            <span class="badge rounded-pill text-bg-secondary text-light">agriculture</span>
+        </li>
+        </ul>
+      </div>
+</div>
