--- a/code source/src/app/newsfilter/newsfilter.component.html
+++ b/code source/src/app/newsfilter/newsfilter.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-  <div class="col-2">
+  <div class="col-3 offset-9">
     <p class="d-inline-flex gap-1">
       <button
         class="btn btn-sm btn-success"
@@ -14,12 +14,12 @@
       </button>
     </p>
   </div>
-  <div class="collapse col" id="collapseExample">
+  <div class="collapse col offset-xl-6" id="collapseExample">
     <form action="">
-      <div class="btn-group">
+      <div class="d-flex flex-row d-flex ">
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-secondary dropdown-toggle"
+            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -59,7 +59,7 @@
 
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-secondary dropdown-toggle"
+            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -81,7 +81,7 @@
 
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-secondary dropdown-toggle"
+            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -118,9 +118,9 @@
             </li>
           </ul>
         </div>
-      </div>
       <button type="submit" class="btn btn-sm btn-outline-danger">save</button>
       <button type="reset" class="btn btn-sm btn-outline-info">reset</button>
+    </div>
     </form>
   </div>
 </div>
