--- a/code source/src/app/searchfilter/searchfilter.component.html
+++ b/code source/src/app/searchfilter/searchfilter.component.html
@@ -18,7 +18,7 @@
         <div class="btn-group">
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-secondary dropdown-toggle"
+              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -58,7 +58,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-secondary dropdown-toggle"
+              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -80,7 +80,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-secondary dropdown-toggle"
+              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -119,7 +119,7 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-secondary dropdown-toggle"
+            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -148,7 +148,7 @@
           </ul>
         </div>
         </div>
-        <button (click)="affich" type="submit" class="btn btn-sm btn-outline-danger" id="bt">save</button>
+        <button (click)="affich()" type="submit" class="btn btn-sm btn-outline-danger" id="bt">save</button>
       </form>
     </div>
   </div>
