--- a/code source/src/app/newsfeed/newsfeed.component.html
+++ b/code source/src/app/newsfeed/newsfeed.component.html
@@ -1,7 +1,16 @@
+<body>
 <div class="container-fluid">
 <app-headernews></app-headernews>
 <br>
 <app-newsfilter></app-newsfilter>
 <br>
-<app-suggested></app-suggested>
+<div class="row">
+    <div class="col-sm-12 col-lg-3"><br/>
+    <app-suggested></app-suggested></div>
+    <div class="col-sm-12 col-lg-5">
+       <br/> <app-create-post></app-create-post></div>
+    
 </div>
+
+</div>
+</body>
