--- a/code source/src/app/headernews/headernews.component.html
+++ b/code source/src/app/headernews/headernews.component.html
@@ -1,6 +1,6 @@
 <link href="./headernews.component.css" rel="stylesheet">
 <div class="container-fluid py-3" id="d1">
-    <div class="row d-flex align-items-center">
+    <div class="row d-flex align-items-center ">
         <div class="col-sm-3 col-md-4 text-center">
             <h1>Start-Match</h1>
             <h6>Start your enterneurship journey</h6>
@@ -12,7 +12,7 @@
             <a href="profile"  ><h6 >Benmoussa Heithem</h6></a>
         </div>
         <div class="col-md-1 text-center">
-            <a href="profile"><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
+            <a href="/profile"><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
         </div>
     </div>
 </div>
