--- a/code source/src/app/create-post/create-post.component.html
+++ b/code source/src/app/create-post/create-post.component.html
@@ -22,13 +22,31 @@
                 <img src="../../assets/iconType.png" id="typeIcon" alt="Photo/Video" style="width: 20px; height: 20px;"> Type
             </button>
             <ul class="dropdown-menu">
-               <!-- <li><input class="form-check-input" type="checkbox" id="founder" >Founder</li>
+                <li><input class="form-check-input" type="checkbox" id="founder" >Founder</li>
                 <li><input class="form-check-input" type="checkbox" id="co-founder">Co-Founder</li>
-                <li><input class="form-check-input" type="checkbox" id="investor">Investor</li> -->
+                <li><input class="form-check-input" type="checkbox" id="investor">Investor</li> 
             </ul>
                
         </div>
-        <button type="submit" id="btnPost" class="btn btn-primary" style="margin-left: 45%;">Post</button>
+        <div class="btn-group">
+            <button class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="../../assets/clipboard.png" id="typeIcon" alt="field" style="width: 20px; height: 20px;"> Fields
+            </button>
+            <ul class="dropdown-menu" id="a">
+               <li><input class="form-check-input" type="checkbox" id="ai" >Artificial Intelligence </li>
+                <li><input class="form-check-input" type="checkbox" id="energy">Renewable Energy</li>
+                <li><input class="form-check-input" type="checkbox" id="cs">Cybersecurity</li> 
+                <li><input class="form-check-input" type="checkbox" id="investor">Cybersecurity</li> 
+                <li><input class="form-check-input" type="checkbox" id="health">Health and Wellness</li> 
+                <li><input class="form-check-input" type="checkbox" id="FinTech">FinTech</li> 
+                <li><input class="form-check-input" type="checkbox" id="education">Online Education</li> 
+                <li><input class="form-check-input" type="checkbox" id="web">Web Development</li> 
+                <li><input class="form-check-input" type="checkbox" id="AgriTech">AgriTech</li> 
+                <li><input class="form-check-input" type="checkbox" id="commerce">E-commerce</li> 
+            </ul>
+               
+        </div>
+        <button type="submit" id="btnPost" class="btn btn-primary" style="margin-left: 27%;">Post</button>
     </div>
 </div></form></div>
 
