--- a/code source/src/app/landingpage/landingpage.component.html
+++ b/code source/src/app/landingpage/landingpage.component.html
@@ -1,1 +1,13 @@
-<p>landingpage works!</p>
+<div class="bg-image" 
+     style="background-image: url('../../assets/bg_land.png');height: 100vh">
+     <div class="row">
+        <div class="col">
+            <h1>Search ,Find ,Invest And Collaborate</h1>
+            <p>in this platform we are up to facilitate the communication between Investors,Startups and Founders.</p>
+            <button>more</button>
+        </div>
+        <div class="col">
+            <img src="../../assets/rajel.png" class="float-end">
+        </div>
+     </div>
+</div>
