--- a/code source/src/app/newsfeed/newsfeed.component.html
+++ b/code source/src/app/newsfeed/newsfeed.component.html
@@ -5,13 +5,15 @@
 <app-newsfilter></app-newsfilter>
 <br>
 <div class="row">
-    <div class="col-3">
+    <div class="col-3 offset-1" style="margin-bottom: 20px;">
         <app-suggested></app-suggested>
     </div>
-    <div class="col-6">
+    
+    <div class="col-lg-6 ">
+        <app-create-post></app-create-post><br>
         <app-beta></app-beta>
     </div>
-
+</div>
 </div>
 <!--
 <br>
