--- a/code source/src/app/navbar/navbar.component.css
+++ b/code source/src/app/navbar/navbar.component.css
@@ -20,4 +20,7 @@ button.btn1{
         border-bottom-right-radius: 22px;
         margin-left: 3px
     }
-    
+    a{
+        color:white ;
+        text-decoration: none;
+    }
