--- a/code source/src/app/navbarnews/navbarnews.component.css
+++ b/code source/src/app/navbarnews/navbarnews.component.css
@@ -43,3 +43,7 @@ button.btn1{
         max-width: 200px;
         min-width: 200px;
     }
+    a{
+        color:white ;
+        text-decoration: none;
+    }
