--- a/code source/src/app/signin/signin.component.css
+++ b/code source/src/app/signin/signin.component.css
@@ -30,3 +30,26 @@ a {
     background-color:rgba(157, 211, 254, 0.3);
    color:white;
 }
+button.btn1{
+    color:white;
+     background: #3A5587;
+     border-top-left-radius: 22px;
+     border-bottom-left-radius: 22px ;
+     border-top-right-radius: 0px;
+     border-bottom-right-radius: 0px;
+ }
+ button.btn2{
+     color:white;
+     background: #3A5587;
+     border-radius:0 ;
+     margin-left: 3px
+ }
+ button.btn3{
+     color:white;
+     background: #3A5587;
+     border-radius:0px ;
+     border-top-right-radius: 22px;
+     border-bottom-right-radius: 22px;
+     margin-left: 3px
+ }
+ 
