--- a/code source/src/app/login-form/login-form.component.html
+++ b/code source/src/app/login-form/login-form.component.html
@@ -18,13 +18,13 @@
                 <a href=""><p style="color: rgb(227, 109, 54); margin-left: 70%; margin-top: 10px;">Forgot password ?</p></a>
                     <div class="col-sm-9 col-lg-8 offset-2">
                         
-                        <button type="submit" class="btn " style="margin-top: 30px; width:100%; background: #f17928;">login</button>
+                        <button type="submit" class="btn " style="margin-top: 30px; width:100%; background: #f17928 ;color:white"><a routerLink='/newsfeed'>login</a></button>
                 </div>
 
                 <div style="margin-left: 40%; margin-top: 50px;">
                     <p style="color: rgb(209, 209, 209); display: inline;">No account ?</p>
                     <a href="" id="signUp"><p style="color: rgb(227, 109, 54); margin-left: 3px; margin-top: 10px; display: inline;">Sign Up</p></a>
-                </div>s
+                </div>
 
                 
                 </form> </div>
