--- a/code source/src/app/signin/signin.component.html
+++ b/code source/src/app/signin/signin.component.html
@@ -6,7 +6,21 @@
                 <h6>Start your enterneurship journey</h6>
             </div>
             <div class="col-md-5 text-center" id="nav">
-                <app-navbar></app-navbar>
+                <div class="container" id="navbarNavAltMarkup">
+                    <div class="row">
+                      <div class="col d-flex align-items-center">
+                         <a routerLink="/landingpage"> <button type="button" class="btn btn1" id="button1"  >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                              <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
+                            </svg>
+                            home
+                          </button></a>
+                          <button type="button" class="btn btn2" id="button2" href="about us">About Us</button>
+                          <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button>
+                        </div>
+                        
+                    </div>
+                    </div>
             </div>
             
         </div>
@@ -22,10 +36,10 @@
                 <div class="card-body">
                     <h4 style="margin-left: 80px;">Start-Up</h4>
                   </div>
-                  <svg routerLink="" style="margin-left:25px;" xmlns="http://www.w3.org/2000/svg" width="253" height="267" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
+                  <a style="color:white" routerLink="/form-startup"><svg  style="margin-left:25px;" xmlns="http://www.w3.org/2000/svg" width="253" height="267" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
                     <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022M6 8.694 1 10.36V15h5zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5z"/>
                     <path d="M2 11h1v1H2zm2 0h1v1H4zm-2 2h1v1H2zm2 0h1v1H4zm4-4h1v1H8zm2 0h1v1h-1zm-2 2h1v1H8zm2 0h1v1h-1zm2-2h1v1h-1zm0 2h1v1h-1zM8 7h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zM8 5h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zm0-2h1v1h-1z"/>
-                  </svg>
+                  </svg></a>
               </div>
         </div>
         <div class="offset-2 col-md-2">
@@ -33,9 +47,9 @@
                 <div class="card-body">
                     <h4 style="margin-left: 80px;">Person</h4>
                   </div>
-                  <svg routerLink=""  xmlns="http://www.w3.org/2000/svg" width="297" height="267" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                 <a style="color:white" routerLink="/form-person"> <svg   xmlns="http://www.w3.org/2000/svg" width="297" height="267" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
-                  </svg>
+                  </svg></a>
               </div>
         </div>
     </div>
