--- a/code source/src/app/filtrage/filtrage.component.html
+++ b/code source/src/app/filtrage/filtrage.component.html
@@ -1,9 +1,17 @@
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-<div class="inline">
-<div class="search-box">
-    <i class="uil uil-search search-icon"></i>
-    <input  id="placer" type="text" placeholder="Search here..." />
+<form>
+<div class=" d-flex justify-content-center">
+ <div class="input-group d">
+    <span class="input-group-text">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg>
+    </span>
+    <input class="form-control" type="search" placeholder="search" id="example-search-input">
+    <button id="search_btn" type="button" class="btn btn-success text-light">Search</button>
+
+
 </div>
-<button id="filter_btn" type="button"  class="btn btn-primary">Filter</button>
-<button id="search_btn" type="button" class="form-control">Search</button>
 </div>
+</form>
+
