--- a/code source/src/app/profile-search/profile-search.component.html
+++ b/code source/src/app/profile-search/profile-search.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-lg-5 , col-sm-12">
+    <div class=" col-sm-12">
         <div class="profile-container">
             <div class="profile-data">
                 <a id="linkProfile1" href=""><img id="user-picture" src="../../assets/1700506697307.jpg" alt="users-picture"></a>
