--- a/code source/src/app/searchfilter/searchfilter.component.html
+++ b/code source/src/app/searchfilter/searchfilter.component.html
@@ -2,7 +2,7 @@
     <div class="col-2">
       <p class="d-inline-flex gap-1">
         <button
-          class="btn btn-sm btn-success"
+          class="btn btn-success"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#collapsesearchfilter"
@@ -18,7 +18,7 @@
         <div class="btn-group">
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -58,7 +58,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -80,7 +80,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -119,11 +119,10 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+            class="btn btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+            aria-expanded="false">
             type
           </button>
           <ul class="dropdown-menu">
@@ -148,7 +147,8 @@
           </ul>
         </div>
         </div>
-        <button (click)="affich()" type="submit" class="btn btn-sm btn-outline-danger" id="bt">save</button>
+        <button (click)="affich()" type="submit" class="btn btn-outline-danger text-dark" id="bt">save</button>
+        <button type="reset" (click)="reset()" class="btn btn-outline-danger text-dark">reset</button>
       </form>
     </div>
   </div>
