--- a/code source/src/app/filtrage/filtrage.component.css
+++ b/code source/src/app/filtrage/filtrage.component.css
@@ -1,31 +1,5 @@
-.inline{
-    display:flex;
-    flex-direction: row;
-    /*justify-items: space-between;*/
-    gap:10px;
-}
-.search-box {
-   /*box-shadow: 1px 1px 1px 1px;*/
-   background-color: #F2F4F8;
-   border-radius:10px;
-   
-  }
-#placer{
-    border:none;
-    background-color:#F2F4F8;
-    height:40px;
-    border-radius:10px;
-    
-}
-#filter_btn{
-    background-color:#8CBDB9;
-    color:#FFFFFF;
-    border-radius:6px;
-    border:none;
-    text-align: center;
-    width:70px;
-    font-family: 'Roboto',sans-serif;
-    font-weight: 500;
+.d{
+    width: 600px;
 }
 #search_btn{
     background-color:#3A5587;
@@ -36,4 +10,5 @@
     text-align:center;
     font-family: 'Roboto',sans-serif;
     font-weight: 500;
-}
+    margin-left: 0.3rem;
+} 
