--- a/code source/src/app/searchfilter/searchfilter.component.css
+++ b/code source/src/app/searchfilter/searchfilter.component.css
@@ -7,7 +7,8 @@
 }
 .btn{
     margin-left: 0.3rem;
-    margin-top: 0rem;
+    margin-top: 0.2rem;
+    background-color:#ffffff;
 }
 .dd{
     background-color: #ffffff;
