--- a/code source/src/app/beta/beta.component.html
+++ b/code source/src/app/beta/beta.component.html
@@ -14,10 +14,10 @@
         <span class="badge badge-pill badge-warning status">Founder</span>
         <div class="card-body pos">
             <div class="text_of_post col-12 mt-2">
-                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a routerLink='/consultpost' class="text-dark" style="text-decoration: none;"><p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></a>
             </div>
         <div class="mb-3 ">
-            <a routeLink="/consultpost"><img class="card-img-bottom " src="https://media.istockphoto.com/id/178447404/fr/photo/b%C3%A2timents-daffaires-moderne.jpg?s=612x612&w=0&k=20&c=KDgacnz516dO2YiaMsiyHABoHaBhv5K1CRjHUEbcviQ="alt="image_within_post"/></a>
+            <a routerLink='/consultpost'><img class="card-img-bottom " src="https://media.istockphoto.com/id/178447404/fr/photo/b%C3%A2timents-daffaires-moderne.jpg?s=612x612&w=0&k=20&c=KDgacnz516dO2YiaMsiyHABoHaBhv5K1CRjHUEbcviQ="alt="image_within_post"/></a>
         </div>
 
         <div class="flexy-2">
