--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -9,10 +9,10 @@
             <app-navbar></app-navbar>
         </div>
         <div class="col-md-2 align-items text-center" id="profile-name">
-            <a href="profile"  ><h6 >Benmoussa Heithem</h6></a>
+            <a routerLink='/profile'><h6 >Benmoussa Heithem</h6></a>
         </div>
         <div class="col-md-1   text-center ">
-            <a href="profile">
+            <a routerLink='/profile'>
                 <img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" >
             </a>
         </div>
