--- a/code source/src/app/newsfeed/newsfeed.component.css
+++ b/code source/src/app/newsfeed/newsfeed.component.css
@@ -1,3 +1,7 @@
 body{
-    background: rgb(232, 232, 232);
-}
+        background-image: url("../../assets/ba.png");
+        background-repeat: no-repeat; 
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+    }
