remove de document

--- a/code source/src/app/profil/profil.component.html
+++ b/code source/src/app/profil/profil.component.html
@@ -1,3 +1,4 @@
+<body>
 <link href="./profil.component.css" rel="stylesheet">
 <app-header></app-header>
 <div class="container-fluid">
@@ -22,3 +23,4 @@
         </div>
     </div>
 </div>
+</body>
