--- a/code source/src/app/consultpost/consultpost.component.html
+++ b/code source/src/app/consultpost/consultpost.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" id="bg">
     <app-header></app-header>
     <br><br>
     <div class="col-md-6 offset-md-3">
