--- a/code source/src/app/searchfilter/searchfilter.component.html
+++ b/code source/src/app/searchfilter/searchfilter.component.html
@@ -2,7 +2,7 @@
     <div class="col-2">
       <p class="d-inline-flex gap-1">
         <button
-          class="btn btn-sm btn-success"
+          class="btn btn-success"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#collapsesearchfilter"
@@ -18,7 +18,7 @@
         <div class="btn-group">
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -29,7 +29,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="more than 20"
                   />more than 20
@@ -38,7 +38,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="between 5 and 20"
                   />between 5 and 20
@@ -47,7 +47,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="less than 5"
                   />less than 5
@@ -58,7 +58,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -69,7 +69,7 @@
               <li *ngFor="let val of field">
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     [value]="val"
                   />{{val}}
@@ -80,7 +80,7 @@
   
           <div class="dropdown">
             <button
-              class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+              class="btn btn-outline-primary text-dark dropdown-toggle"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -91,7 +91,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="founder"
                   />founder
@@ -100,7 +100,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="co-founder"
                   />co-founder
@@ -109,7 +109,7 @@
               <li>
                 <div class="dropdown-item">
                   <input
-                    type="checkbox"
+                    type="checkbox" #checkboxes (change)="getSelectedFilters()"
                     class="form-check-input"
                     value="investor"
                   />investor
@@ -119,18 +119,17 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn btn-sm btn-outline-primary text-dark dropdown-toggle"
+            class="btn btn-outline-primary text-dark dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+            aria-expanded="false">
             type
           </button>
           <ul class="dropdown-menu">
             <li>
               <div class="dropdown-item">
                 <input
-                  type="checkbox"
+                  type="checkbox" #checkboxes (change)="getSelectedFilters()"
                   class="form-check-input"
                   value="post"
                 />post
@@ -139,7 +138,7 @@
             <li>
               <div class="dropdown-item">
                 <input
-                  type="checkbox"
+                  type="checkbox" #checkboxes (change)="getSelectedFilters()"
                   class="form-check-input"
                   value="profile"
                 />profile
@@ -148,7 +147,8 @@
           </ul>
         </div>
         </div>
-        <button (click)="affich()" type="submit" class="btn btn-sm btn-outline-danger" id="bt">save</button>
+        <button (click)="affich()" type="submit" class="btn btn-outline-danger text-dark" id="bt">save</button>
+        <button type="reset" (click)="reset()" class="btn btn-outline-danger text-dark">reset</button>
       </form>
     </div>
   </div>
